force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/Apttus_Config2__ExternalOrderSummaryItem__c.object-meta.xml
<CustomObject>
    <description>Represents a product or service line item associated with an external order summary</description>
    <label>External Order Summary Item</label>
    <nameField>
        <displayFormat>EOI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Summary Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>