force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__IncentiveBenefitAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveBenefitAmount__c</fullName>
    <description>The total incentive benefit amount</description>
    <inlineHelpText>The total incentive benefit amount</inlineHelpText>
    <label>Incentive Benefit Amount</label>
    <summarizedField>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__IncentiveAdjustmentAmount__c</summarizedField>
    <summaryForeignKey>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>