force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__ListPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ListPrice__c</fullName>
    <description>The list price for the product or service</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>