force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__NetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
    <description>The net unit price for the product or service</description>
    <inlineHelpText>The net unit price for the product or service</inlineHelpText>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>