force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderSummaryId__c</fullName>
    <description>ID of the associated external summary order</description>
    <inlineHelpText>ID of the associated external summary order</inlineHelpText>
    <label>Order Summary</label>
    <referenceTo>Apttus_Config2__ExternalOrderSummary__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>