force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
    <description>The period start date</description>
    <inlineHelpText>The period start date</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>