force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCategory__c</fullName>
    <description>One or more categories associated with the product</description>
    <label>Product Category</label>
    <type>TextArea</type>
</CustomField>