force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product or service</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Summary Items</relationshipLabel>
    <relationshipName>OrderSummaryItems</relationshipName>
    <type>Lookup</type>
</CustomField>