force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__SoldToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the sold to account</description>
    <inlineHelpText>ID of the sold to account</inlineHelpText>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Summary Items (Sold To)</relationshipLabel>
    <relationshipName>OrderSummaryItemsSoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>