force-app/main/default/objects/Apttus_Config2__ExternalOrderSummaryItem__c/fields/Apttus_Config2__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Status__c</fullName>
    <description>The status indicator</description>
    <inlineHelpText>The status indicator</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready for Incentive Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>